# P2P-Insole-SparseIMU-Realtime_experiment

./: .gitignore  main.py  output_fk_test.txt  pyproject.toml  realtime.py  tmp_check_data.py  train.py  visualizer.py
dataset/: __init__.py  insole_dataset.py
models/: encoder.py  model.py
processor/: __init__.py  filter.py  preprocessor.py
