[project]
name = "p2p-insole-sparseimu-realtime"
version = "0.1.0"
description = "Real-time skeleton estimation from insole pressure and sparse IMUs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch",
    "torchvision",
    "numpy",
    "dash",
    "flask",
    "pandas",
    "scipy"
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu126" }
torchvision = { index = "pytorch-cu126" }
